# Spark-Dev

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CMake/: Utils.cmake
Sandbox/: CMakeLists.txt
Sandbox/Assets/Shaders/: Grid.glsl  PhoneLighting_Color.glsl  UnlitColor.glsl
Sandbox/Src/: Main.cpp  SandboxLayer.cpp  SandboxLayer.h
Scripts/: Setup.cmd
Spark/: CMakeLists.txt
Spark/Libs/: CMakeLists.txt
Spark/Src/: Main.cpp  Spark.h
Spark/Src/Animation/: Animation.cpp  Animation.h  Skeleton.cpp  Skeleton.h
Spark/Src/Core/: Application.cpp  Application.h  Assert.h  Base.h  EntryPoint.cpp  EntryPoint.h  Layer.cpp  Layer.h  Log.cpp  Log.h  Math.h  Time.h  Window.h
Spark/Src/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Spark/Src/Input/: Input.h  KeyCodes.h  MouseCodes.h
Spark/Src/Math/: AABB.h  Math.cpp  Math.h
Spark/Src/Platform/Windows/: WindowsInput.cpp  WindowsTime.cpp  WindowsWindow.cpp  WindowsWindow.h
Spark/Src/RHI/OpenGL/: OpenGLContext.cpp  OpenGLContext.h  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h
Spark/Src/Renderer/: Camera.cpp  Camera.h  EditorCamera.cpp  EditorCamera.h  GraphicsContext.h  IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  RenderCommand.cpp  RenderCommand.h  RendererAPI.h  Shader.cpp  Shader.h  Submesh.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
